<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/app_name">
    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_nightmode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:padding="16dp">
        <TextView
            android:id="@+id/textview_night_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/text_night_mode" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <RadioButton
                android:id="@+id/radio_nightmode_on"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_nightmode_on" />

            <RadioButton
                android:id="@+id/radio_nightmode_off"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_nightmode_off" />

            <RadioButton
                android:id="@+id/radio_nightmode_system"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_nightmode_system" />

        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/layout_nightmode"
        android:padding="16dp">
        <TextView
            android:id="@+id/textview_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/text_language" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <RadioButton
                android:id="@+id/radio_language_en"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_language_en" />

            <RadioButton
                android:id="@+id/radio_language_ru"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_language_ru" />

        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>